--- a/BindstoneGameServer.vcxproj.filters
+++ b/BindstoneGameServer.vcxproj.filters
@@ -68,6 +68,9 @@
     <Filter Include="Source Files\Game\NetworkLayer">
       <UniqueIdentifier>{4988f8a3-c401-48d3-a3f5-48e932198ab4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="LINQ">
+      <UniqueIdentifier>{0d11c6e3-9ce0-49ae-af1b-5e253c180c25}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Audio\sound.cpp">
@@ -563,6 +566,7 @@
     <ClCompile Include="Source\Game\NetworkLayer\gameServer.cpp">
       <Filter>Source Files\Game\NetworkLayer</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Game\managers.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Audio\package.h">
@@ -1319,6 +1323,12 @@
       <Filter>Source Files\Game\NetworkLayer</Filter>
     </ClInclude>
     <ClInclude Include="Source\Game\NetworkLayer\gameServer.h">
+      <Filter>Source Files\Game\NetworkLayer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\external\LINQ\boolinq.hpp">
+      <Filter>LINQ</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Game\NetworkLayer\networkAction.h">
       <Filter>Source Files\Game\NetworkLayer</Filter>
     </ClInclude>
   </ItemGroup>
