--- a/BindstoneLobby.vcxproj.filters
+++ b/BindstoneLobby.vcxproj.filters
@@ -563,6 +563,9 @@
     <ClCompile Include="Source\Game\NetworkLayer\gameServerActions.cpp">
       <Filter>Source Files\Game\NetworkLayer</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Game\managers.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Audio\package.h">
