Multiplayer works, beginning work on the waterfalls. Got a new shader in for them.
Former-commit-id: a895d6e6e9eb46ea283732c441ffaa25ee9d7784 [formerly 309d6bae1f9bc5c3a226d3bb9e7024a136255f4a]
Former-commit-id: a8a700bbca9868c3dc4e87d4c0102890ec4926f5

--- a/BindstoneGameServer.vcxproj
+++ b/BindstoneGameServer.vcxproj
@@ -323,6 +323,7 @@
     <ClCompile Include="Source\Game\game.cpp" />
     <ClCompile Include="Source\Game\gameEditor.cpp" />
     <ClCompile Include="Source\Game\Instance\gameInstance.cpp" />
+    <ClCompile Include="Source\Game\Instance\team.cpp" />
     <ClCompile Include="Source\Game\Interface\guiFactories.cpp" />
     <ClCompile Include="Source\Game\Interface\interfaceManager.cpp" />
     <ClCompile Include="Source\Game\managers.cpp" />
@@ -558,6 +559,7 @@
     <ClInclude Include="Source\Game\creature.h" />
     <ClInclude Include="Source\Game\gameEditor.h" />
     <ClInclude Include="Source\Game\Instance\gameInstance.h" />
+    <ClInclude Include="Source\Game\Instance\team.h" />
     <ClInclude Include="Source\Game\Interface\guiFactories.h" />
     <ClInclude Include="Source\Game\Interface\interfaceManager.h" />
     <ClInclude Include="Source\Game\managers.h" />
@@ -622,6 +624,7 @@
     <ClInclude Include="Source\Utility\signal.hpp" />
     <ClInclude Include="Source\Utility\stopwatch.h" />
     <ClInclude Include="Source\Utility\task.hpp" />
+    <ClInclude Include="Source\Utility\taskActions.hpp" />
     <ClInclude Include="Source\Utility\threadPool.h" />
     <ClInclude Include="Source\Utility\tinyutf8.h" />
     <ClInclude Include="Source\Utility\tupleHelpers.hpp" />
