--- a/BindstoneGameServer.vcxproj.filters
+++ b/BindstoneGameServer.vcxproj.filters
@@ -567,6 +567,9 @@
       <Filter>Source Files\Game\NetworkLayer</Filter>
     </ClCompile>
     <ClCompile Include="Source\Game\managers.cpp" />
+    <ClCompile Include="Source\Game\Instance\team.cpp">
+      <Filter>Source Files\Game\Instance</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Audio\package.h">
@@ -1330,6 +1333,12 @@
     </ClInclude>
     <ClInclude Include="Source\Game\NetworkLayer\networkAction.h">
       <Filter>Source Files\Game\NetworkLayer</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Utility\taskActions.hpp">
+      <Filter>Source Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Game\Instance\team.h">
+      <Filter>Source Files\Game\Instance</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
