--- a/BindstoneLobby.vcxproj.filters
+++ b/BindstoneLobby.vcxproj.filters
@@ -566,6 +566,9 @@
     <ClCompile Include="Source\Game\managers.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Game\Instance\team.cpp">
+      <Filter>Source Files\Game\Instance</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Audio\package.h">
@@ -1326,6 +1329,9 @@
     </ClInclude>
     <ClInclude Include="Source\Game\NetworkLayer\networkAction.h">
       <Filter>Source Files\Game\NetworkLayer</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Game\Instance\team.h">
+      <Filter>Source Files\Game\Instance</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
