Progress with buliding. Almost all dependencies converted.
Former-commit-id: ce899b26f5f9876fe4bb17bbc227326d7b17f6ff [formerly 550fa81343592f55cba347d01be80aaff5c3f9ea]
Former-commit-id: 4943d315551d99d245880dff921ad925a2eee607

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_subdirectory(Animation)
 add_subdirectory(Utility)
+add_subdirectory(ArtificialIntelligence)
+add_subdirectory(Render)
+add_subdirectory(Audio)
 
 add_executable(MoonDog main.cpp)
-target_link_libraries(MoonDog animation)
+target_link_libraries(MoonDog artificialintelligence audio)
