--- a/Source/ArtificialIntelligence/CMakeLists.txt
+++ b/Source/ArtificialIntelligence/CMakeLists.txt
@@ -1,6 +1,3 @@
-add_library(artificialintelligence STATIC
-  pathfinding.cpp
+target_sources(MoonDog PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/pathfinding.cpp
 )
-
-target_link_libraries(artificialintelligence PUBLIC utility render)
-target_include_directories(artificialintelligence PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
