--- a/Source/Audio/CMakeLists.txt
+++ b/Source/Audio/CMakeLists.txt
@@ -1,5 +1,6 @@
-add_library(audio STATIC
-  package.h sound.cpp sound.h
-)
 
-target_link_libraries(audio PUBLIC utility render CONAN_PKG::SDL2_mixer)
+target_sources(MoonDog PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/package.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/sound.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/sound.h
+)
