--- a/Source/Render/CMakeLists.txt
+++ b/Source/Render/CMakeLists.txt
@@ -1,36 +1,26 @@
-add_library(render STATIC
-  boxaabb.cpp
-  formattedText.cpp
-  matrix.cpp
-  points.cpp
-  render.cpp
-  sharedTextures.cpp
-  texturePacker.cpp
-  textures.cpp
-  Scene/button.cpp
-  Scene/clickable.cpp
-  Scene/clipped.cpp
-  Scene/component.cpp
-  Scene/drawable.cpp
-  Scene/emitter.cpp
-  Scene/grid.cpp
-  Scene/node.cpp
-  Scene/palette.cpp
-  Scene/path.cpp
-  Scene/scroller.cpp
-  Scene/slider.cpp
-  Scene/spineMV.cpp
-  Scene/sprite.cpp
-  Scene/stencil.cpp
-  Scene/text.cpp
-)
-
-target_include_directories(render PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(render PUBLIC
-  utility
-  CONAN_PKG::gl3w
-  CONAN_PKG::SDL2
-  CONAN_PKG::SDL2_ttf
-  CONAN_PKG::SDL2_image
-  CONAN_PKG::spine
+target_sources(MoonDog PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/boxaabb.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/formattedText.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/matrix.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/points.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/render.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/sharedTextures.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/texturePacker.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/textures.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/button.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/clickable.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/clipped.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/component.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/drawable.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/emitter.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/grid.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/node.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/palette.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/path.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/scroller.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/slider.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/spineMV.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/sprite.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/stencil.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Scene/text.cpp
 )
