Adjust linkage for iOS

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -16,7 +16,7 @@ add_subdirectory(Physics)
 
 target_link_libraries(MoonDog
   CONAN_PKG::OpenSSL
-  CONAN_PKG::libpqxx
+  $<$<PLATFORM_ID:Windows>CONAN_PKG::libpqxx>
   CONAN_PKG::Box2D
   CONAN_PKG::chaiscript
   CONAN_PKG::boost
@@ -26,7 +26,7 @@ target_link_libraries(MoonDog
   CONAN_PKG::SDL2_ttf
   CONAN_PKG::SDL2_mixer
   CONAN_PKG::SDL2_image
-  CONAN_PKG::gl3w
+  $<$<PLATFORM_ID:Windows>CONAN_PKG::gl3w>
   CONAN_PKG::spine
   CONAN_PKG::boolinq
 )
@@ -42,4 +42,6 @@ target_compile_definitions(MoonDog PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:_SCL_SECURE_NO_WARNINGS NOMINMAX _CRT_SECURE_NO_WARNINGS _WIN32_WINNT=0x0501 _HAS_AUTO_PTR_ETC>
 )
 
-add_precompiled_header(MoonDog StdAfx.h SOURCE_CXX StdAfx.cpp FORCEINCLUDE)
+if(NOT XCODE)
+  add_precompiled_header(MoonDog StdAfx.h SOURCE_CXX StdAfx.cpp FORCEINCLUDE)
+endif()
