Improving thread pool performance, improving render performance, updating map with streams and vortex.

--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -140,9 +140,6 @@
     <ClCompile Include="Source\Render\Scene\slider.cpp">
       <Filter>Source Files\Render\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Utility\threadPool.cpp">
-      <Filter>Source Files\Utility</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Render\texturePacker.cpp">
       <Filter>Source Files\Render</Filter>
     </ClCompile>
@@ -565,6 +562,9 @@
     </ClCompile>
     <ClCompile Include="Source\Game\Instance\team.cpp">
       <Filter>Source Files\Game\Instance</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Utility\asioThreadPool.cpp">
+      <Filter>Source Files\Utility</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1329,6 +1329,9 @@
     </ClInclude>
     <ClInclude Include="Source\Game\Instance\team.h">
       <Filter>Source Files\Game\Instance</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Utility\asioThreadPool.h">
+      <Filter>Source Files\Utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
