--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -361,7 +361,7 @@
     <ClCompile Include="Source\Utility\log.cpp" />
     <ClCompile Include="Source\Utility\sha512.cpp" />
     <ClCompile Include="Source\Utility\stopwatch.cpp" />
-    <ClCompile Include="Source\Utility\threadPool.cpp" />
+    <ClCompile Include="Source\Utility\asioThreadPool.cpp" />
     <ClCompile Include="Source\Utility\tinyutf8.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -602,6 +602,7 @@
     <ClInclude Include="Source\Render\sharedTextures.h" />
     <ClInclude Include="Source\Render\texturePacker.h" />
     <ClInclude Include="Source\Render\textures.h" />
+    <ClInclude Include="Source\Utility\asioThreadPool.h" />
     <ClInclude Include="Source\Utility\cerealUtility.h" />
     <ClInclude Include="Source\Utility\chaiscriptStdLib.h" />
     <ClInclude Include="Source\Utility\chaiscriptUtility.h" />
