--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -661,9 +661,6 @@
     <ClInclude Include="Source\Utility\task.hpp">
       <Filter>Source Files\Utility</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Utility\threadPool.h">
-      <Filter>Source Files\Utility</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Render\texturePacker.h">
       <Filter>Source Files\Render</Filter>
     </ClInclude>
@@ -1331,6 +1328,9 @@
       <Filter>Source Files\Game\Instance</Filter>
     </ClInclude>
     <ClInclude Include="Source\Utility\asioThreadPool.h">
+      <Filter>Source Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Utility\threadPool.hpp">
       <Filter>Source Files\Utility</Filter>
     </ClInclude>
   </ItemGroup>
