--- a/Source/Utility/CMakeLists.txt
+++ b/Source/Utility/CMakeLists.txt
@@ -1,10 +1,21 @@
 target_sources(MoonDog PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/chaiscriptStdLib.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/chaiscriptStdLib.h
   ${CMAKE_CURRENT_SOURCE_DIR}/expression.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/expression.h
   ${CMAKE_CURRENT_SOURCE_DIR}/generalUtility.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/generalUtility.h
   ${CMAKE_CURRENT_SOURCE_DIR}/log.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/log.h
   ${CMAKE_CURRENT_SOURCE_DIR}/sha512.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/sha512.h
   ${CMAKE_CURRENT_SOURCE_DIR}/stopwatch.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/stopwatch.h
   ${CMAKE_CURRENT_SOURCE_DIR}/threadPool.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/threadPool.h
   ${CMAKE_CURRENT_SOURCE_DIR}/tinyutf8.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/tinyutf8.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/tupleHelpers.hpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/task.hpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/taskActions.hpp
 )
