task.hpp make use of ExactType<bool> for disambiguation.
Former-commit-id: bea5a7f4f84d72eb6b3604148a33cc4af0d32301 [formerly dfa8559f2737757d80c5b5d1d11e731ae593b05e]
Former-commit-id: ffdfc49c21f00546e17fe642536dbd533db2bafa

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -606,6 +606,7 @@
     <ClInclude Include="Source\Utility\cerealUtility.h" />
     <ClInclude Include="Source\Utility\chaiscriptStdLib.h" />
     <ClInclude Include="Source\Utility\chaiscriptUtility.h" />
+    <ClInclude Include="Source\Utility\exactType.hpp" />
     <ClInclude Include="Source\Utility\generalUtility.h" />
     <ClInclude Include="Source\Utility\log.h" />
     <ClInclude Include="Source\Utility\optionalCalls.hpp" />
