Updating CMakeLists to include new threadpool files.
Former-commit-id: 6caafe7092a4037520d1f518d2d2898af834ba2c [formerly fda52ab4aaca40820b9a28535e199fb0bcc46aa7]
Former-commit-id: 58327cff79ae576064c655eb7bd72545ea6ebe2a

--- a/Source/Utility/CMakeLists.txt
+++ b/Source/Utility/CMakeLists.txt
@@ -12,8 +12,9 @@ target_sources(MoonDog PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/sha512.h
   ${CMAKE_CURRENT_SOURCE_DIR}/stopwatch.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/stopwatch.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/threadPool.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/threadPool.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/threadPool.hpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/asioThreadPool.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/asioThreadPool.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/tinyutf8.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/tinyutf8.h
   ${CMAKE_CURRENT_SOURCE_DIR}/tupleHelpers.hpp
