--- a/BindstoneGameServer.vcxproj.filters
+++ b/BindstoneGameServer.vcxproj.filters
@@ -140,9 +140,6 @@
     <ClCompile Include="Source\Render\Scene\slider.cpp">
       <Filter>Source Files\Render\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Utility\threadPool.cpp">
-      <Filter>Source Files\Utility</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Render\texturePacker.cpp">
       <Filter>Source Files\Render</Filter>
     </ClCompile>
@@ -570,6 +567,9 @@
     <ClCompile Include="Source\Game\Instance\team.cpp">
       <Filter>Source Files\Game\Instance</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Utility\asioThreadPool.cpp">
+      <Filter>Source Files\Utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Audio\package.h">
@@ -663,9 +663,6 @@
       <Filter>Source Files\Utility</Filter>
     </ClInclude>
     <ClInclude Include="Source\Utility\task.hpp">
-      <Filter>Source Files\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Utility\threadPool.h">
       <Filter>Source Files\Utility</Filter>
     </ClInclude>
     <ClInclude Include="Source\Render\texturePacker.h">
@@ -1339,6 +1336,12 @@
     </ClInclude>
     <ClInclude Include="Source\Game\Instance\team.h">
       <Filter>Source Files\Game\Instance</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Utility\threadPool.hpp">
+      <Filter>Source Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Utility\asioThreadPool.h">
+      <Filter>Source Files\Utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
