Add resources and set some Xcode properties

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.4 FATAL_ERROR)
-project(MoonDog C CXX)
+project(BindStone C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -8,9 +8,14 @@ include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
 
 include(CMake/PrecompiledHeader.cmake)
+include(CMake/Resources.cmake)
+
+add_resources(TARGET MoonDog SOURCES ${CMAKE_SOURCE_DIR}/Assets DEST .)
 
 if(${CMAKE_GENERATOR} MATCHES "^Visual Studio.*$")
   set(GENERATOR_MSVC TRUE)
 endif()
+
+set(APP_VERSION 1.0)
 
 add_subdirectory(Source)
