Removing old matrix class.
Former-commit-id: 74b739fd86fff61cb2713825e41135bd916a7d37 [formerly 865f4aa63d8fc52561d2b52c01ef68e4f4c3c357]
Former-commit-id: 6c7ef7a9c514d447dc40448600072ddca6c0065a

--- a/BindstoneLobby.vcxproj.filters
+++ b/BindstoneLobby.vcxproj.filters
@@ -91,9 +91,6 @@
     <ClCompile Include="Source\Utility\generalUtility.cpp">
       <Filter>Source Files\Utility</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Render\matrix.cpp">
-      <Filter>Source Files\Render</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Network\network.cpp">
       <Filter>Source Files\Network</Filter>
     </ClCompile>
@@ -597,9 +594,6 @@
     </ClInclude>
     <ClInclude Include="Source\Utility\generalUtility.h">
       <Filter>Source Files\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Render\matrix.h">
-      <Filter>Source Files\Render</Filter>
     </ClInclude>
     <ClInclude Include="Source\Network\network.h">
       <Filter>Source Files\Network</Filter>
@@ -1335,6 +1329,9 @@
     </ClInclude>
     <ClInclude Include="Source\Utility\threadPool.hpp">
       <Filter>Source Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Render\matrix.hpp">
+      <Filter>Source Files\Render</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
