--- a/BindstoneGameServer.vcxproj
+++ b/BindstoneGameServer.vcxproj
@@ -350,7 +350,6 @@
     <ClCompile Include="Source\Render\Scene\grid.cpp" />
     <ClCompile Include="Source\Render\Scene\path.cpp" />
     <ClCompile Include="Source\Render\Scene\node.cpp" />
-    <ClCompile Include="Source\Render\matrix.cpp" />
     <ClCompile Include="Source\Render\points.cpp" />
     <ClCompile Include="Source\Render\render.cpp" />
     <ClCompile Include="Source\Render\Scene\drawable.cpp" />
@@ -579,6 +578,7 @@
     <ClInclude Include="Source\Physics\collider.h" />
     <ClInclude Include="Source\Physics\package.h" />
     <ClInclude Include="Source\Render\boxaabb.h" />
+    <ClInclude Include="Source\Render\matrix.hpp" />
     <ClInclude Include="Source\Render\Scene\component.h" />
     <ClInclude Include="Source\Render\Scene\emitter.h" />
     <ClInclude Include="Source\Render\Scene\clipped.h" />
@@ -597,7 +597,6 @@
     <ClInclude Include="Source\Render\Scene\path.h" />
     <ClInclude Include="Source\Render\Scene\package.h" />
     <ClInclude Include="Source\Render\Scene\node.h" />
-    <ClInclude Include="Source\Render\matrix.h" />
     <ClInclude Include="Source\Render\package.h" />
     <ClInclude Include="Source\Render\points.h" />
     <ClInclude Include="Source\Render\render.h" />
